--- a/style.css
+++ b/style.css
@@ -1,131 +1,151 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
-
 
 /* NAVIGATION BARNAVIGATION BAR NAVIGATION BAR */
 
 #nav-bar {
-    position: sticky;
-    top: 0;
-    z-index: 10;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
 
 .navbar-brand img {
-    margin-left: 30px;
+  margin-left: 30px;
 }
 
 .navbar-nav li {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 
 .navbar-nav li a {
-    float: right;
-    text-align: right;
+  float: right;
+  text-align: right;
 }
 
 #nav-bar ul li a:hover {
-    color: #007bff !important;
+  color: #007bff !important;
 }
 
 .navbar {
-    background: #fff;
+  background: #fff;
 }
 
 .navbar-toggler {
-    border: none !important;
+  border: none !important;
 }
 
 .nav-link {
-    color: #555 !important;
-    font-weight: 600;
-    font-size: 16px;
+  color: #555 !important;
+  font-weight: 600;
+  font-size: 16px;
 }
-
-
-/* WELCOME*/
+.bord {
+  border: 0.6px solid;
+  border-radius: 5%;
+  margin-right: 10px;
+}
+.bord:hover {
+  color: #2a88cc;
+}
+/* WELCOME SECTION STYLES*/
 
 .welcome {
-    height: 250px;
-    width: 100%;
-    background: #2a88cc;
+  height: 250px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.home {
+  color: black;
+}
+.come {
+  color: #2a88cc;
+  margin-right: 0.8vw;
 }
 
 h3 {
-    color: white;
+  color: white;
 }
 
 .home {
-    margin-right: 20vw;
+  margin-right: 20vw;
 }
 
 p {
-    color: white;
+  color: white;
 }
 
 .log {
-    color: black;
-    font-weight: bold;
+  color: #2a88cc;
+  font-weight: bold;
 }
-
-.welcome {
-    display: flex;
-    align-items: center;
+.log a {
+  color: #2a88cc;
 }
 
 .welcome-content {
-    margin-left: 50px;
-    text-align: center;
+  margin-left: 50px;
+  text-align: center;
 }
 
 .login {
-    text-align: center;
-    padding-top: 34px;
-    margin-right: 100px;
+  text-align: center;
+  padding-top: 34px;
+  margin-right: 100px;
 }
-
+/*FORM SECTION STYLES*/
 .form {
-    text-align: center;
-    margin-top: 60px;
+  text-align: center;
+  margin-top: 60px 0;
 }
+label {
+  position: absolute;
+  font-size: 12px;
+  margin-bottom: 10px;
+  padding: 0 10px;
 
-.details {
-    border: 0.5px;
-    outline: 0.1px solid #2a88cc;
-    width: 350px;
-    height: 40px;
-    pad
+  transition: top 0.2s ease-in-out font-size 0.2s ease-in-out;
 }
-
-.act {
-    margin-top: 10px;
+.info {
+  position: relative;
+  margin: 40px 0 0 0;
+}
+input[type="text"] {
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 800;
+  border: 0.5px;
+  outline: 0.1px solid #2a88cc;
+  width: 350px;
+  height: 45px;
 }
 
 .btn1 {
-    border: none;
-    background: #2a88cc;
-    color: white;
-    width: 350px;
-    height: 40px;
-    margin-top: 20px;
+  border: none;
+  background: #2a88cc;
+  color: white;
+  width: 350px;
+  height: 40px;
+  margin-top: 20px;
 }
 
 .btn2 {
-    border: none;
-    background: #e30c0c;
-    color: white;
-    width: 350px;
-    height: 40px;
+  border: none;
+  background: #e30c0c;
+  color: white;
+  width: 350px;
+  height: 40px;
 }
 
 .or {
-    text-align: center;
-    margin-right: 70px;
-    color: black;
-    padding-top: 10px;
+  text-align: center;
+  margin-right: 70px;
+  color: #2a88cc;
+  padding-top: 10px;
+  font-weight: 300;
 }
-
 
 /*.or:before {
     content: "";
@@ -150,48 +170,69 @@ p {
     display: inline-block;
 }*/
 
+/*FOOTER STYLES*/
 .foot-cont {
-    width: 100%;
-    padding-top: 50px;
-    color: white;
-    background: #001220;
+  width: 100%;
+  padding-top: 50px;
+  color: white;
+  background: #001220;
 }
-
+.row {
+  margin-top: 30px;
+}
 .signup {
-    text-align: center;
-    margin-right: 55px;
-    margin-top: 05px;
+  text-align: center;
+  margin-right: 80px;
+  margin-top: 05px;
+  color: #001220;
 }
 
 .remember-me {
-    text-align: center;
-    padding: 10px;
+  text-align: center;
+  padding: 10px;
 }
 
 .pass {
-    margin-left: 115px;
+  margin-left: 115px;
 }
 
 .box {
-    display: none;
+  display: none;
 }
 
 h4,
 p {
-    text-align: left;
-    margin-left: 10vw;
+  text-align: left;
+  margin-left: 10vw;
+}
+p a {
+  color: #fff;
+}
+.btn1 a,
+.btn2 a {
+  color: #fff;
 }
 
 .icons {
-    display: inline-block;
-    margin-top: 8vh;
-    margin-left: 10vw;
+  display: inline-block;
+
+  margin-left: 10vw;
 }
 
 img {
-    margin-top: 40vh;
-    margin: auto;
-    background-color: white;
+  margin-bottom: 30px;
+  margin: auto;
+  background-color: #fff;
+  margin-left: 10vw;
+  max-width: 100%;
+  height: auto;
 }
-
-@media (min-width: 800px) {}
+/*MEDIA QUERIES*/
+@media (min-width: 800px) {
+  .or {
+    margin-right: 150px;
+  }
+  .signup {
+    margin-right: 120px;
+  }
+}
