--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
 }
-
+body {
+  background-color: green;
+}
 /* NAVIGATION BARNAVIGATION BAR NAVIGATION BAR */
 
 #nav-bar {
@@ -215,8 +217,10 @@ p a {
 
 .icons {
   display: inline-block;
-
   margin-left: 10vw;
+}
+.icons a {
+  color: #fff;
 }
 
 img {
